--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+
 html, body {
     background-color: #70CF51;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Press Start 2P';
     overflow:hidden;
     margin:0px; padding:0px;
     background-image: url('../images/sky.jpg');
@@ -35,4 +37,27 @@ bullet {
     background-image: url('../images/bullet.png');
     background-size: cover;
     background-position: center;
+}
+
+start {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 48px;
+    color: white;
+    position: absolute;
+    top: 400px; 
+    left: 43%;
+}
+
+score {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 48px;
+    color: white;
+}
+
+gameover {
+    font-size: 48px;
+    position: absolute;
+    left: 20%;
+    top: 100px;
+    color: white;
 }
